# android-sdkmanager-rs

./: Cargo.toml  README.md  README.tpl  release.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yaml
src/: lib.rs  main.rs
