[package]
name = "android-sdk-manager-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sdkmanager"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
ureq = "2.4"
roxmltree = "0.14"
zip = "0.5"
globalenv = "0.4"
dunce = "1"
rayon = "1.5"
bytes = "1.1"

[profile.dev.package.'*']
opt-level = 's'
debug = true
