[package]
name = "android-sdkmanager-rs"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust native replacement for Android's sdkmanager"
categories = ["android"]
homepage = "https://github.com/Traverse-Research/android-sdkmanager-rs"
repository = "https://github.com/Traverse-Research/android-sdkmanager-rs"
keywords = ["android", "sdkmanager"]
documentation = "https://docs.rs/android-sdkmanager-rs/"

include = [
    "Cargo.toml",
    "LICENSE-*",
    "src/**",
]

[lib]
name = "android_sdkmanager"
path = "src/lib.rs"

[[bin]]
name = "cargo-android-sdkmanager"
path = "src/main.rs"

[dependencies]
ureq = "2.4"
roxmltree = "0.14"
zip = "0.5"
globalenv = "0.4"
dunce = "1"
rayon = "1.5"
bytes = "1.1"

[profile.dev.package.'*']
opt-level = 's'
debug = true
