[package]
name = "android-sdkmanager-rs"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust native replacement for Android's sdkmanager"
categories = ["android"]
homepage = "https://github.com/Traverse-Research/android-sdkmanager-rs"
repository = "https://github.com/Traverse-Research/android-sdkmanager-rs"
keywords = ["android", "sdkmanager"]
documentation = "https://docs.rs/android-sdkmanager-rs/"

include = [
    "Cargo.toml",
    "LICENSE-*",
    "src/**",
]

[lib]
name = "android_sdkmanager"
path = "src/lib.rs"

[[bin]]
name = "cargo-android-sdkmanager"
path = "src/main.rs"

[dependencies]
ureq = "2.4"
roxmltree = "0.15"
zip = "0.6"
rayon = "1.5"
pico-args = "0.5"
anyhow = "1"

[profile.dev.package.'*']
opt-level = 's'
debug = true
